# otus_guess_the_number

./: CMakeLists.txt  README.md  check_value.cpp  check_value.h  get_high_score.cpp  get_high_score.h  guess_the_number.cpp  write_scores.cpp  write_scores.h
